--- a/devel/p5-Module-Install/Makefile
+++ b/devel/p5-Module-Install/Makefile
@@ -1,7 +1,5 @@
-
-
 PORTNAME=	Module-Install
-PORTVERSION=	1.18
+PORTVERSION=	1.21
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -9,7 +7,7 @@ PKGNAMEPREFIX=	p5-
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Standalone, extensible Perl module installer
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 BUILD_DEPENDS=	p5-File-Remove>=1.42:devel/p5-File-Remove \
