devel/p5-Module-ScanDeps: update

--- a/devel/p5-Module-ScanDeps/Makefile
+++ b/devel/p5-Module-ScanDeps/Makefile
@@ -1,23 +1,23 @@
-
-
 PORTNAME=	Module-ScanDeps
-PORTVERSION=	1.24
+PORTVERSION=	1.35
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Recursively scan Perl code for dependencies
+WWW=		https://metacpan.org/release/Module-ScanDeps
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-TEST_DEPENDS=	p5-Test-Requires>=0:devel/p5-Test-Requires
+TEST_DEPENDS=	p5-IPC-Run3>=0.048:devel/p5-IPC-Run3 \
+		p5-Test-Requires>=0:devel/p5-Test-Requires
+
+USES=		perl5
+USE_PERL5=	configure
 
 NO_ARCH=	yes
-USE_PERL5=	configure
-USES=		perl5
-PERL_CONFIGURE=	yes
 
 .include <bsd.port.mk>
