--- a/devel/p5-MooseX-Role-Parameterized/Makefile
+++ b/devel/p5-MooseX-Role-Parameterized/Makefile
@@ -1,13 +1,14 @@
 PORTNAME=	MooseX-Role-Parameterized
-PORTVERSION=	1.10
+PORTVERSION=	1.11
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Roles with composition parameters
+WWW=		https://metacpan.org/release/MooseX-Role-Parameterized
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
