--- a/devel/Makefile
+++ b/devel/Makefile
@@ -498,7 +498,9 @@ SUBDIR += p5-File-Find-Object
 SUBDIR += p5-File-Find-Rule
 SUBDIR += p5-File-Find-Rule-Perl
 SUBDIR += p5-File-HomeDir
+SUBDIR += p5-File-MimeInfo
 SUBDIR += p5-File-NFSLock
+SUBDIR += p5-File-ReadBackwards
 SUBDIR += p5-File-Remove
 SUBDIR += p5-File-ShareDir
 SUBDIR += p5-File-ShareDir-Install
@@ -525,6 +527,7 @@ SUBDIR += p5-Hash-MoreUtils
 SUBDIR += p5-Hash-MultiValue
 SUBDIR += p5-Heap
 SUBDIR += p5-Hook-LexWrap
+SUBDIR += p5-IO-All
 SUBDIR += p5-IO-Capture
 SUBDIR += p5-IO-CaptureOutput
 SUBDIR += p5-IO-HTML
