--- a/devel/p5-Test-Simple/Makefile
+++ b/devel/p5-Test-Simple/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	Test-Simple
-PORTVERSION=	1.302199
+PORTVERSION=	1.302203
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -12,8 +12,16 @@ LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-NO_ARCH=	yes
 USES=		perl5
 USE_PERL5=	configure
 
-.include <bsd.port.mk>
+NO_ARCH=	yes
+
+.include <bsd.port.pre.mk>
+
+.if ${PERL_LEVEL} < 504000
+BUILD_DEPENDS+=	p5-Term-Table>=0.013:devel/p5-Term-Table
+RUN_DEPENDS+=	p5-Term-Table>=0.013:devel/p5-Term-Table
+.endif
+
+.include <bsd.port.post.mk>
