--- a/devel/glib20/Makefile
+++ b/devel/glib20/Makefile
@@ -15,9 +15,6 @@ BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}packaging>0:devel/py-packaging@${PY_FLAVOR
 LIB_DEPENDS=	libffi.so:devel/libffi \
 		libpcre2-8.so:devel/pcre2
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}packaging>0:devel/py-packaging@${PY_FLAVOR}
-TEST_DEPENDS=	dbus-uuidgen:devel/dbus \
-		update-desktop-database:devel/desktop-file-utils \
-		update-mime-database:misc/shared-mime-info
 
 # iconv:wchar_t - our iconv in base doesn't support utf-8 -> wchar_t (boooo)
 # (wchar_t is used by glibmm, rawtherapee triggered this)
@@ -45,12 +42,12 @@ CONFLICTS_INSTALL=	p5-Giovanni
 _LIBVERSION=	0.8000.5
 PLIST_SUB=	LIBVERSION=${_LIBVERSION}
 
-OPTIONS_DEFINE=		DOCS FAM_ALTBACKEND MANPAGES NLS TEST
+OPTIONS_DEFINE=		DOCS FAM_ALTBACKEND MANPAGES NLS
 OPTIONS_DEFAULT=	MANPAGES
 OPTIONS_SUB=		yes
 
 DOCS_BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}gi-docgen>0:textproc/py-gi-docgen@${PY_FLAVOR}
-DOCS_IMPLIES=		MANPAGES TEST
+DOCS_IMPLIES=		MANPAGES
 DOCS_MESON_TRUE=	documentation
 
 FAM_ALTBACKEND_DESC=	Alternate file monitor backend
@@ -58,7 +55,8 @@ FAM_ALTBACKEND_DESC=	Alternate file monitor backend
 MANPAGES_BUILD_DEPENDS=	rst2man:textproc/py-docutils
 MANPAGES_MESON_ENABLED=	man-pages
 
-TEST_MESON_TRUE=	tests
+# tests require circular dependency
+NO_TEST=	yes
 
 .include <bsd.port.pre.mk>
 
@@ -109,8 +107,5 @@ post-install:
 		${PREFIX}/share/bash-completion/completions/
 .endfor
 	-${RM} -r ${PREFIX}/libexec/installed-tests
-
-pre-test:
-	${LOCALBASE}/bin/dbus-uuidgen > /var/lib/dbus/machine-id
 
 .include <bsd.port.post.mk>
