--- a/x11-servers/xorg-server/Makefile
+++ b/x11-servers/xorg-server/Makefile
@@ -116,14 +116,8 @@ USE_XORG+=	pciaccess
 
 MESON_ARGS+=	-Dsha1=libmd
 
-.if ${ARCH} == aarch64 || ${ARCH} == amd64 || ${ARCH} == armv7 || ${ARCH} == i386 || ${ARCH} == powerpc || ${ARCH} == powerpc64 || ${ARCH} == powerpc64le
+.if ${ARCH} == aarch64 || ${ARCH} == amd64 || ${ARCH} == armv7 || ${ARCH} == i386
 LIB_DEPENDS+=	libunwind.so:devel/libunwind
-.endif
-
-.if ${ARCH} == "sparc64"
-PLIST_SUB+=	SPARC64=""
-.else
-PLIST_SUB+=	SPARC64="@comment "
 .endif
 
 .if ${FLAVOR} == xorg
