devel/py-qt5-pyqt: change dir

--- a/devel/py-qt5-pyqt/Makefile
+++ b/devel/py-qt5-pyqt/Makefile
@@ -42,7 +42,7 @@ post-install:
 		-f -d ${PYTHONPREFIX_SITELIBDIR}/PyQt5 \
 		${FAKE_DESTDIR}${PYTHONPREFIX_SITELIBDIR}/PyQt5
 	${PYTHON_CMD} -O ${PYTHON_LIBDIR}/compileall.py \
-		-f -d ${PYTHONPREFIX_SITELIBDIR}/PyQt5 \
+		-f -d ${FAKE_DESTDIR}${PYTHONPREFIX_SITELIBDIR}/PyQt5 \
 		${FAKE_DESTDIR}${PYTHONPREFIX_SITELIBDIR}/PyQt5
 #	@${FIND} ${FAKE_DESTDIR}${PYTHONPREFIX_SITELIBDIR}/PyQt5 \
 #		-name '*.so*' -exec ${STRIP_CMD} {} +
