databases/mariadb106-server:
ok

--- a/databases/mariadb106-server/Makefile
+++ b/databases/mariadb106-server/Makefile
@@ -244,6 +244,7 @@ pre-install:
 .if ${PKGNAMESUFFIX:M*-client}
 post-install:
 	${MKDIR} ${ETCDIR}
+	${MKDIR} ${ETCDIR}/conf.d
 	${INSTALL_DATA} ${WRKDIR}/my.cnf.sample ${ETCDIR}/my.cnf.sample
 	${INSTALL_DATA} ${WRKDIR}/client.cnf.sample \
 		${ETCDIR}/conf.d/client.cnf.sample
