--- a/shells/pdksh/files/patch-Makefile.in
+++ b/shells/pdksh/files/patch-Makefile.in
@@ -1,23 +1,13 @@
---- ./Makefile.in.orig	Thu May 10 10:23:54 2007
-+++ ./Makefile.in	Thu May 10 10:24:37 2007
-@@ -80,17 +80,11 @@
- 	$(CC) -c $(CPPFLAGS) $(DEFS) -I. -I$(srcdir) $(CFLAGS) $<
+--- Makefile.in	2014-02-19 10:09:23.000000000 +0100
++++ Makefile.in	2014-02-19 10:09:57.000000000 +0100
+@@ -26,8 +26,8 @@
+ exec_prefix = @exec_prefix@
+ transform=@program_transform_name@
  
- install: installdirs all
--	$(INSTALL_PROGRAM) $(SHELL_PROG)$(exe_suffix) $(bindir)/`echo $(SHELL_PROG)|sed '$(transform)'`$(exe_suffix)
--	-$(INSTALL_DATA) $(SHELL_PROG).1 $(mandir)/`echo $(SHELL_PROG)|sed '$(transform)'`.$(manext)
--	-@prog=$(bindir)/`echo $(SHELL_PROG)|sed '$(transform)'`$(exe_suffix);\
--	    test -f /etc/shells \
--	    && (grep "^$$prog\$$" /etc/shells > /dev/null \
--		|| echo \
--"NOTE: /etc/shells does not contain $$prog \
--      you should add it if you want to set your shell to $(SHELL_PROG)")
-+	$(INSTALL_PROGRAM) $(SHELL_PROG)$(exe_suffix) $(DESTDIR)$(bindir)/`echo $(SHELL_PROG)|sed '$(transform)'`$(exe_suffix)
-+	-$(INSTALL_DATA) $(SHELL_PROG).1 $(DESTDIR)$(mandir)/`echo $(SHELL_PROG)|sed '$(transform)'`.$(manext)
+-bindir = $(exec_prefix)/bin
+-mandir = $(prefix)/man/man$(manext)
++bindir = $(DESTDIR)$(exec_prefix)/bin
++mandir = $(DESTDIR)$(prefix)/share/man/man$(manext)
+ manext = 1
  
- installdirs:
--	$(srcdir)/mkinstalldirs $(bindir) $(mandir)
-+	$(srcdir)/mkinstalldirs $(DESTDIR)$(bindir) $(DESTDIR)$(mandir)
- 
- uninstall:
- 	rm -f $(bindir)/`echo $(SHELL_PROG)|sed '$(transform)'`$(exe_suffix)
+ # Suffix for executables: nothing for unix, .exe for os/2.
