sysutils/coreutils: fix cve

--- a/sysutils/coreutils/Makefile
+++ b/sysutils/coreutils/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	coreutils
-PORTVERSION=	9.4
+PORTVERSION=	9.5
 PORTREVISION=	0
 CATEGORIES=	sysutils textproc
 MASTER_SITES=	GNU
@@ -40,7 +40,7 @@ OPTIONS_SUB=	yes
 NLS_USES=	gettext
 NLS_CONFIGURE_ENABLE=   nls
 GMP_LIB_DEPENDS=	libgmp.so:math/gmp
-GMP_CONFIGURE_WITH=	gmp
+GMP_CONFIGURE_WITH=	libgmp
 
 NO_TEST=	yes
 
