--- a/textproc/p5-SGMLSpm/Makefile
+++ b/textproc/p5-SGMLSpm/Makefile
@@ -12,11 +12,13 @@ WWW=		https://metacpan.org/release/DMEGG/SGMLSpm-1.03ii
 LICENSE=	gpl2
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		perl5
+USES=		shebangfix perl5
 USE_PERL5=	run
 NO_BUILD=	yes
 WRKSRC=		${WRKDIR}/${PORTNAME}
-
+SHEBANG_FILES=	sgmlspl.pl \
+		DOC/sample.pl \
+		DOC/HTML/SGMLSpm/example.html
 
 FAKE_MAKEARGS=	BINDIR=${FAKE_DESTDIR}${PREFIX}/bin PERL5DIR=${FAKE_DESTDIR}${SITE_PERL} 
 FAKE_MAKEARGS+= SPECDIR=${FAKE_DESTDIR}${EXAMPLESDIR} HTMLDIR=${FAKE_DESTDIR}${DOCSDIR}
