devel/p5-Parallel-ForkManager: 2.03

--- a/devel/p5-Parallel-ForkManager/Makefile
+++ b/devel/p5-Parallel-ForkManager/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	Parallel-ForkManager
-PORTVERSION=	2.02
+PORTVERSION=	2.03
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -7,7 +7,7 @@ PKGNAMEPREFIX=	p5-
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Simple parallel processing fork manager
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 BUILD_DEPENDS=	${RUN_DEPENDS}
