update redis 7.4.0 (note the license change) make a redis 7.2 port for people who don't want the license change.

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -183,6 +183,7 @@ SUBDIR += qt5-sqldrivers-tds
 SUBDIR += qt6-base_sqldriver
 SUBDIR += redis
 SUBDIR += redis62
+SUBDIR += redis72
 SUBDIR += rrdtool
 SUBDIR += ruby-bdb
 SUBDIR += sfcgal
