--- a/devel/Makefile
+++ b/devel/Makefile
@@ -49,6 +49,7 @@ SUBDIR += bugzilla44
 SUBDIR += bugzilla50
 SUBDIR += bullet
 SUBDIR += cargo-c
+SUBDIR += catch
 SUBDIR += cereal
 SUBDIR += compiler-rt
 SUBDIR += cgit
