--- a/multimedia/emby-server/Makefile
+++ b/multimedia/emby-server/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	emby-server
-DISTVERSION?=	4.7.14.0
-PORTREVISION?=	3
+DISTVERSION?=	4.8.1.0
+PORTREVISION?=	0
 CATEGORIES=	multimedia
 MASTER_SITES=	https://github.com/MediaBrowser/Emby.Releases/releases/download/${DISTVERSION}/ \
 		https://mediabrowser.github.io/embytools/
@@ -35,7 +35,7 @@ LIB_DEPENDS=	libaribb24.so:multimedia/aribb24 \
 		libfontconfig.so:x11-fonts/fontconfig \
 		libfreetype.so:print/freetype2 \
 		libfribidi.so:converters/fribidi \
-		libmbedtls.so:security/mbedtls \
+		libgnutls.so:security/gnutls \
 		libmfx.so:multimedia/intel-media-sdk \
 		libOpenCL.so:devel/ocl-icd \
 		libogg.so:audio/libogg \
@@ -53,6 +53,7 @@ LIB_DEPENDS=	libaribb24.so:multimedia/aribb24 \
 		libzvbi.so:devel/libzvbi
 
 RUN_DEPENDS=	icu>0:devel/icu \
+		krb5>0:security/krb5 \
 		libexif>0:graphics/libexif \
 		libheif>0:graphics/libheif \
 		libimagequant>0:graphics/libimagequant \
@@ -60,9 +61,12 @@ RUN_DEPENDS=	icu>0:devel/icu \
 		libjxl>0:graphics/libjxl \
 		libunwind>0:devel/libunwind \
 		openjpeg>0:graphics/openjpeg \
-		orc>0:devel/orc
+		orc>0:devel/orc \
+		openexr>0:graphics/openexr \
+		pango>0:x11-toolkits/pango \
+		tiff>0:graphics/tiff
 
-USES=		compiler:c11 gmake iconv localbase:ldflags pkgconfig sqlite ssl:run
+USES=		compiler:c11 gmake iconv localbase:ldflags magick:6 pkgconfig sqlite ssl:run
 USE_RC_SUBR=	${PORTNAME}
 
 HAS_CONFIGURE=	yes
@@ -77,9 +81,11 @@ CONFIGURE_ARGS=	--cc="${CC}" \
 		--disable-sndio \
 		--disable-v4l2-m2m \
 		--disable-vdpau \
+		--disable-vulkan \
 		--disable-xlib \
 		--enable-chromaprint \
 		--enable-fontconfig \
+		--enable-gnutls \
 		--enable-gpl \
 		--enable-iconv \
 		--enable-libaribb24 \
@@ -98,7 +104,6 @@ CONFIGURE_ARGS=	--cc="${CC}" \
 		--enable-libx264 \
 		--enable-libx265 \
 		--enable-libzvbi \
-		--enable-mbedtls \
 		--enable-opencl \
 		--enable-optimizations \
 		--enable-static \
@@ -139,6 +144,7 @@ do-install:
 	(${INSTALL_PROGRAM} ${WRKSRC}/ffprobe ${STAGEDIR}${PREFIX}/lib/emby-server/bin)
 	@${MKDIR} ${STAGEDIR}${PREFIX}/lib/emby-server/lib
 	(cd ${WRKDIR}/lib && ${COPYTREE_BIN} . ${STAGEDIR}${PREFIX}/lib/emby-server/lib)
+	${RLN} ${LOCALBASE}/lib/libimagequant.so.0.0.0 ${STAGEDIR}${PREFIX}/lib/emby-server/lib/libimagequant.so.0
 	@${MKDIR} ${STAGEDIR}${PREFIX}/lib/emby-server/system
 	(${INSTALL_DATA} ${WRKDIR}/SQLitePCLRaw.provider.sqlite3.dll.config ${STAGEDIR}${PREFIX}/lib/emby-server/system)
 	(cd ${WRKDIR}/system && ${COPYTREE_SHARE} . ${STAGEDIR}${PREFIX}/lib/emby-server/system "! -name EmbyServer")
