--- a/security/Makefile
+++ b/security/Makefile
@@ -52,6 +52,7 @@ SUBDIR += keepass
 SUBDIR += keepass-plugin-keepassrpc
 SUBDIR += krb5
 SUBDIR += krb5-120
+SUBDIR += krb5-121
 SUBDIR += l0phtcrack
 SUBDIR += libargon2
 SUBDIR += libassuan
