--- a/devel/libgee/Makefile
+++ b/devel/libgee/Makefile
@@ -1,23 +1,31 @@
 PORTNAME=	libgee
-PORTVERSION=	0.20.3
+PORTVERSION=	0.20.6
+PORTREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	GNOME
 DIST_SUBDIR=	gnome
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	GObject collection library
+WWW=		https://wiki.gnome.org/Projects/Libgee
 
 LICENSE=	lgpl2.1
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-BUILD_DEPENDS=	valac:lang/vala
+PORTSCOUT=	limitw:1,even
 
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--enable-introspection=yes
-USES=		cpe gettext gmake gnome libtool pathfix pkgconfig tar:xz
+USES=		compiler cpe gettext gmake gnome libtool pathfix pkgconfig tar:xz vala:build
 USE_GNOME=	glib20 introspection:build
 USE_LDCONFIG=	yes
 INSTALL_TARGET=	install-strip
 CPE_VENDOR=	gnome
 
-.include <bsd.port.mk>
+.include <bsd.port.pre.mk>
+
+.if ${COMPILER_TYPE} == clang
+CFLAGS+=	-Wno-incompatible-function-pointer-types
+.endif
+
+.include <bsd.port.post.mk>
