--- a/databases/lmdb/Makefile
+++ b/databases/lmdb/Makefile
@@ -1,11 +1,13 @@
 PORTNAME=	lmdb
-PORTVERSION=	0.9.24
+PORTVERSION=	0.9.33
+PORTREVISION=	0
 DISTVERSIONPREFIX=	${PORTNAME:tu}_
 PORTEPOCH=	1
 CATEGORIES=	databases
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	OpenLDAP Lightning Memory-Mapped Database
+WWW=		https://symas.com/lmdb/
 
 LICENSE=	openldap2.8
 
@@ -17,10 +19,15 @@ MAKE_ARGS+=	INSTALL_LIB="${INSTALL_LIB}" INSTALL_DATA="${INSTALL_DATA}" INSTALL_
 USE_LDCONFIG=	yes
 
 USE_GITHUB=	yes
-GH_ACCOUNT=	${PORTNAME:tu}
+GH_ACCOUNT=	openldap
+GH_PROJECT=	openldap
+
+SUB_FILES+=	lmdb.pc
+SUB_LIST+=	PORTVERSION=${PORTVERSION}
 
 post-install:
 	${LN} -sf liblmdb.so.0 ${STAGEDIR}${PREFIX}/lib/liblmdb.so
+	${INSTALL_DATA} ${WRKDIR}/lmdb.pc ${STAGEDIR}${PREFIX}/libdata/pkgconfig
 
 do-test:
 	${MKDIR} ${WRKSRC}/testdb
