--- a/games/openrct2/Makefile
+++ b/games/openrct2/Makefile
@@ -1,8 +1,8 @@
 PORTNAME=	openrct2
 DISTVERSIONPREFIX=	v
-DISTVERSION=	0.4.13
+DISTVERSION=	0.4.14
 CATEGORIES=	games
-MASTER_SITES=	https://github.com/OpenRCT2/title-sequences/releases/download/v0.4.6/:sequence \
+MASTER_SITES=	https://github.com/OpenRCT2/title-sequences/releases/download/v0.4.14/:sequence \
 		https://github.com/OpenRCT2/objects/releases/download/v1.4.7/:object \
 		https://github.com/OpenRCT2/OpenMusic/releases/download/v1.6/:openmsx \
 		https://github.com/OpenRCT2/OpenSoundEffects/releases/download/v1.0.5/:opensfx
@@ -18,7 +18,7 @@ WWW=		https://openrct2.io/
 LICENSE=	gpl3+
 LICENSE_FILE=	${WRKSRC}/licence.txt
 
-USE_GCC=	yes
+#USE_GCC=	yes
 
 BUILD_DEPENDS=	nlohmann-json>0:devel/nlohmann-json
 LIB_DEPENDS=	libpng.so:graphics/png \
