--- a/security/Makefile
+++ b/security/Makefile
@@ -22,6 +22,9 @@ SUBDIR += courier-authlib-base
 SUBDIR += courierpassd
 SUBDIR += courieruserinfo
 SUBDIR += cracklib
+SUBDIR += crowdsec
+SUBDIR += crowdsec-blocklist-mirror
+SUBDIR += crowdsec-firewall-bouncer
 SUBDIR += cryptopp
 SUBDIR += cvm
 SUBDIR += cyrus-sasl2
