--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -100,6 +100,7 @@ SUBDIR += gstreamer1-plugins-cdio
 SUBDIR += htop
 SUBDIR += hw-probe
 SUBDIR += hwstat
+SUBDIR += i2c-tools
 SUBDIR += incron
 SUBDIR += intel-epct
 SUBDIR += intel-nvmupdate-100g
