--- a/x11/xbacklight/Makefile
+++ b/x11/xbacklight/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	xbacklight
-PORTVERSION=	1.2.3
+PORTVERSION=	1.2.4
 CATEGORIES=	x11
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -9,7 +9,7 @@ LICENSE=	mit
 
 LIB_DEPENDS=	libxcb-util.so:x11/xcb-util
 
-USES=		xorg xorg-cat:app
+USES=		tar:xz xorg xorg-cat:app
 USE_XORG=	x11 xrender xrandr xcb
 
 PLIST_FILES=	bin/xbacklight share/man/man1/xbacklight.1.gz
