--- a/x11/libXcursor/Makefile
+++ b/x11/libXcursor/Makefile
@@ -1,21 +1,22 @@
-# Created by: Eric Anholt <anholt@FreeBSD.org>
-
 PORTNAME=	libXcursor
-PORTVERSION=	1.2.0
+PORTVERSION=	1.2.2
 CATEGORIES=	x11
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	X client-side cursor loading library
+WWW=		https://www.freedesktop.org/Software/xlibs
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		cpe xorg xorg-cat:lib
+USES=		cpe tar:xz xorg xorg-cat:lib
 USE_XORG=	xrender x11 xfixes xorgproto
 CPE_VENDOR=	x
 CPE_PRODUCT=	libxcursor
 
-CONFIGURE_ARGS=	--with-icondir=${PREFIX}/share/icons
+GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
+CONFIGURE_ARGS=	--with-icondir=${PREFIX}/share/icons \
+		--with-cursorpath="~/.local/share/icons:~/.icons:${PREFIX}/share/icons:${PREFIX}/share/pixmaps"
 INSTALL_TARGET=	install-strip
 
 .include <bsd.port.mk>
