first pass at wifi firmware needed for current

--- a/net/Makefile
+++ b/net/Makefile
@@ -214,6 +214,14 @@ SUBDIR += vether-kmod
 SUBDIR += vinagre
 SUBDIR += vino
 SUBDIR += vncreflector
+SUBDIR += wifi-firmware-ath10k-kmod
+SUBDIR += wifi-firmware-ath11k-kmod
+SUBDIR += wifi-firmware-ath12k-kmod
+SUBDIR += wifi-firmware-iwlwifi-kmod
+SUBDIR += wifi-firmware-kmod
+SUBDIR += wifi-firmware-mt76-kmod
+SUBDIR += wifi-firmware-rtw88-kmod
+SUBDIR += wifi-firmware-rtw89-kmod
 SUBDIR += wireguard-go
 SUBDIR += wireshark
 SUBDIR += x11vnc
