add some firmware

--- a/comms/Makefile
+++ b/comms/Makefile
@@ -6,6 +6,7 @@ SUBDIR += aldo
 SUBDIR += atslog
 SUBDIR += bforce
 SUBDIR += bforce-kst
+SUBDIR += bluez-firmware
 SUBDIR += chu
 SUBDIR += comserv
 SUBDIR += gstreamer1-plugins-spandsp
@@ -34,6 +35,7 @@ SUBDIR += qt6-connectivity
 SUBDIR += qt6-sensors
 SUBDIR += qt6-serialbus
 SUBDIR += qt6-serialport
+SUBDIR += rtlbt-firmware
 SUBDIR += spandsp
 SUBDIR += tits
 SUBDIR += usbmuxd
