--- a/comms/tits/Makefile
+++ b/comms/tits/Makefile
@@ -1,24 +1,23 @@
-
-
 PORTNAME=	tits
-PORTVERSION=	1.1.2
-PORTREVISION=	2
+PORTVERSION=	1.3.0
 CATEGORIES=	comms
 MASTER_SITES=	http://www.mctavish.co.uk/tits/
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	A server which provides telnet(1) access to one or more tty ports
+COMMENT=	server which provides telnet(1) access to one or more tty ports
 
 LICENSE=	bsd4
 
-MAKE_ENV=	BINDIR=${PREFIX}/sbin MANDIR=${PREFIX}/man/man
-
+USES=		uidfix
 USE_RC_SUBR=	tits
+
+MAKE_ENV=	BINDIR=${PREFIX}/sbin MANDIR=${PREFIX}/share/man/man
 
 post-patch:
 	${REINPLACE_CMD} -e 's|/usr/local|${PREFIX}|g' ${WRKSRC}/tits.8
 
 post-install:
-	${INSTALL_DATA} ${WRKSRC}/tits.conf ${PREFIX}/etc/tits.conf.default
+	${INSTALL_DATA} ${WRKSRC}/tits.conf \
+		${PREFIX}/etc/tits.conf.default
 
 .include <bsd.port.mk>
