--- a/comms/Makefile
+++ b/comms/Makefile
@@ -35,6 +35,8 @@ SUBDIR += qt6-connectivity
 SUBDIR += qt6-sensors
 SUBDIR += qt6-serialbus
 SUBDIR += qt6-serialport
+SUBDIR += rtl-433
+SUBDIR += rtl-sdr
 SUBDIR += rtlbt-firmware
 SUBDIR += spandsp
 SUBDIR += tits
