sysutils/edk2: update to 2023

--- a/sysutils/edk2/Makefile
+++ b/sysutils/edk2/Makefile
@@ -1,14 +1,13 @@
 PORTNAME=	edk2
-PORTVERSION=	g202202
+PORTVERSION=	g202308
+PORTREVISION=	5
 CATEGORIES=	sysutils
 
 PATCH_SITES=	https://github.com/${GH_ACCOUNT}/${GH_PROJECT}/commit/
-PATCHFILES=	22130dcd98b4d4b76ac8d922adb4a2dbc86fa52c.patch:-p1 \
-		85021f8cf22d1bd4114803c6c610dea5ef0059f1.patch:-p1
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	EDK2 Firmware for ${FLAVOR}
-WWW=	https://github.com/${GH_ACCOUNT}/${GH_PROJECT}/ReadMe.rst
+WWW=		https://github.com/${GH_ACCOUNT}/${GH_PROJECT}/
 
 LICENSE=	bsd3
 
@@ -26,19 +25,19 @@ BUILD_DEPENDS+=	dtc>=1.4.1:sysutils/dtc \
 		bash:shells/bash
 
 # Both platform and non-osi repository don't have release, use latest known to work tag
-PLATFORM_TAG=	38855c56
-NONOSI_TAG=	6996a45d
+PLATFORM_TAG=	e509ac5a72
+NONOSI_TAG=	8c09bd0955
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	tianocore
-GH_TAGNAME=	edk2-stable202202
+GH_TAGNAME=	edk2-stable202308
 GH_TUPLE=	tianocore:edk2-platforms:${PLATFORM_TAG}:platforms \
 		tianocore:edk2-non-osi:${NONOSI_TAG}:nonosi \
-		openssl:openssl:OpenSSL_1_1_1j:openssl/CryptoPkg/Library/OpensslLib/openssl \
-		ucb-bar:berkeley-softfloat-3:master:softfloat/ArmPkg/Library/ArmSoftFloatLib/berkeley-softfloat-3 \
-		kkos:oniguruma:v6.9.4_mark1:oniguruma/MdeModulePkg/Universal/RegularExpressionDxe/oniguruma \
 		google:brotli:v1.0.9-35-gf4153a0:brotli/MdeModulePkg/Library/BrotliCustomDecompressLib/brotli \
-		akheron:jansson:v2.13.1:jansson/RedfishPkg/Library/JsonLib/jansson
+		google:googletest:release-1.8.0-2983-g86add134:googletest/UnitTestFrameworkPkg/Library/GoogleTestLib/googletest \
+		MIPI-Alliance:public-mipi-sys-t:v1.1+edk2:mipisyst/MdePkg/Library/MipiSysTLib/mipisyst \
+		openssl:openssl:openssl-3.0.9:openssl/CryptoPkg/Library/OpensslLib/openssl \
+		tianocore:edk2-cmocka:cmocka-1.1.5-23-g1cc9cde:cmocka/UnitTestFrameworkPkg/Library/CmockaLib/cmocka
 
 .include <bsd.port.pre.mk>
 
@@ -57,10 +56,13 @@ BINARY_ALIAS=	make=${LOCALBASE}/bin/gmake \
 # coverage for aarch64 g++ code generation's use of libgcc_s.so.1 ):
 EXTRA_LDFLAGS+=	-Wl,-rpath=${_GCC_RUNTIME}
 
+# Global args
+PLAT_ARGS=	-D NETWORK_IP6_ENABLE
+
 .if ${FLAVOR} == fvp
 PLAT=		fvp
 PLAT_ARCH=	AARCH64
-PLAT_ARGS=	-D X64EMU_ENABLE=FALSE -D CAPSULE_ENABLE=FALSE
+PLAT_ARGS+=	-D X64EMU_ENABLE=FALSE -D CAPSULE_ENABLE=FALSE
 PLAT_TARGET=	RELEASE
 PLATFILE=	Platform/ARM/VExpressPkg/ArmVExpress-FVP-AArch64.dsc
 PLAT_RESULT=	ArmVExpress-FVP-AArch64/${PLAT_TARGET}_GCC5/FV/FVP_AARCH64_EFI.fd
@@ -70,7 +72,7 @@ PLAT_FILENAME=	FVP_AARCH64_EFI.fd
 .if ${FLAVOR} == macchiatobin
 PLAT=		macchiatobin
 PLAT_ARCH=	AARCH64
-PLAT_ARGS=	-D X64EMU_ENABLE=TRUE -D CAPSULE_ENABLE=FALSE
+PLAT_ARGS+=	-D X64EMU_ENABLE=TRUE -D CAPSULE_ENABLE=FALSE
 PLAT_TARGET=	RELEASE
 PLATFILE=	Platform/SolidRun/Armada80x0McBin/Armada80x0McBin.dsc
 PLAT_RESULT=	Armada80x0McBin-AARCH64/${PLAT_TARGET}_GCC5/FV/ARMADA_EFI.fd
@@ -80,7 +82,7 @@ PLAT_FILENAME=	ARMADA_EFI.fd
 .if ${FLAVOR} == rpi3
 PLAT=		rpi3
 PLAT_ARCH=	AARCH64
-PLAT_ARGS=	-D X64EMU_ENABLE=FALSE -D CAPSULE_ENABLE=FALSE
+PLAT_ARGS+=	-D X64EMU_ENABLE=FALSE -D CAPSULE_ENABLE=FALSE
 PLAT_TARGET=	RELEASE
 PLATFILE=	Platform/RaspberryPi/RPi3/RPi3.dsc
 PLAT_RESULT=	RPi3/${PLAT_TARGET}_GCC5/FV/RPI_EFI.fd
@@ -90,7 +92,7 @@ PLAT_FILENAME=	RPI_EFI.fd
 .if ${FLAVOR} == rpi4
 PLAT=		rpi4
 PLAT_ARCH=	AARCH64
-PLAT_ARGS=	-D X64EMU_ENABLE=FALSE -D CAPSULE_ENABLE=FALSE
+PLAT_ARGS+=	-D X64EMU_ENABLE=FALSE -D CAPSULE_ENABLE=FALSE
 PLAT_TARGET=	RELEASE
 PLATFILE=	Platform/RaspberryPi/RPi4/RPi4.dsc
 PLAT_RESULT=	RPi4/${PLAT_TARGET}_GCC5/FV/RPI_EFI.fd
@@ -113,6 +115,7 @@ ONLY_FOR_ARCHS=	amd64
 ONLY_FOR_ARCHS_REASON=	Bhyve only runs on x64
 PLAT=		bhyve
 PLAT_ARCH=	X64
+PLAT_ARGS+=	-D SECURE_BOOT_ENABLE=TRUE -D TPM2_ENABLE=TRUE
 PLAT_TARGET=	RELEASE
 PLATFILE=	OvmfPkg/Bhyve/BhyveX64.dsc
 PLAT_RESULT=	BhyveX64/${PLAT_TARGET}_GCC5/FV/BHYVE.fd
@@ -121,6 +124,7 @@ PLAT_RESULT_VARS=	BhyveX64/${PLAT_TARGET}_GCC5/FV/BHYVE_VARS.fd
 PLAT_FILENAME=	BHYVE_UEFI.fd
 PLAT_FILENAME_CODE=	BHYVE_UEFI_CODE.fd
 PLAT_FILENAME_VARS=	BHYVE_UEFI_VARS.fd
+PATCHFILES=	ffce430d2b65d508a1604dc986ba16db3583943d.patch:-p1
 .endif
 
 .if ${FLAVOR} == qemu_x64
