--- a/sysutils/bhyve-firmware/Makefile
+++ b/sysutils/bhyve-firmware/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	bhyve-firmware
 PORTVERSION=	1.0
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	sysutils
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -9,12 +9,8 @@ WWW=		https://wiki.freebsd.org/bhyve/UEFI
 
 LICENSE=	bsd2
 
-RUN_DEPENDS=	uefi-edk2-bhyve>=0:sysutils/uefi-edk2-bhyve
+RUN_DEPENDS=	${LOCALBASE}/share/uefi-firmware/BHYVE_UEFI_CODE.fd:sysutils/edk2@bhyve
 
 USES=			metaport
-OPTIONS_DEFINE=		CSM
-OPTIONS_DEFAULT=	CSM
-CSM_DESC=		Include firmware with Compatibility Support Module
-CSM_RUN_DEPENDS=	uefi-edk2-bhyve-csm>=0:sysutils/uefi-edk2-bhyve-csm
 
 .include <bsd.port.mk>
