sysutils/Makefile: fix index

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -59,7 +59,7 @@ SUBDIR += e2fsprogs
 SUBDIR += e2fsprogs-core
 SUBDIR += ebsnvme-id
 SUBDIR += ec2-scripts
-SUBDIR += ed2k
+SUBDIR += edk2
 SUBDIR += edid-decode
 SUBDIR += entr
 SUBDIR += exa
