--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1360,6 +1360,7 @@ SUBDIR += re2c
 SUBDIR += readline
 SUBDIR += rebar
 SUBDIR += rebar3
+SUBDIR += riscv64-none-elf-gcc
 SUBDIR += rlog
 SUBDIR += ruby-gems
 SUBDIR += rubygem-concurrent-ruby
