--- a/sysutils/munin-node/Makefile
+++ b/sysutils/munin-node/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	munin
 PORTVERSION=	${MUNIN_VERSION}
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	sysutils perl5
 PKGNAMESUFFIX=	-node
 
@@ -31,6 +31,9 @@ EXTRA_PATCHES+=	${MUNIN_PATCHES}
 USES=		gmake perl5 cpe shebangfix
 PKGMESSAGE=	${WRKDIR}/pkg-message
 REINPLACE_ARGS=	-i ""
+SHEBANG_FILES=	node/bin/munindoc node/sbin/munin-node \
+		node/sbin/munin-node-configure node/sbin/munin-run
+
 
 .include "${.CURDIR}/../munin-common/munin.mk"
 
