--- a/www/Makefile
+++ b/www/Makefile
@@ -137,6 +137,8 @@ SUBDIR += p5-LWP-MediaTypes
 SUBDIR += p5-LWP-Online
 SUBDIR += p5-LWP-Protocol-http10
 SUBDIR += p5-LWP-Protocol-https
+SUBDIR += p5-LWP-UserAgent-Cached
+SUBDIR += p5-LWP-UserAgent-Determined
 SUBDIR += p5-Mojolicious
 SUBDIR += p5-Mojo-IOLoop-Delay
 SUBDIR += p5-Mojo-IOLoop-ForkCall
