--- a/sysutils/munin-master/Makefile
+++ b/sysutils/munin-master/Makefile
@@ -51,8 +51,8 @@ PORTSCOUT=	ignore:1
 
 post-install:
 	(cd ${WRKSRC}/build/doc; \
-		${INSTALL_MAN} munin.conf.5 ${MAN5PREFIX}/man/man5; \
-		${INSTALL_MAN} munin-cron.8 munin-graph.8 munin-html.8 munin-limits.8 munin-update.8 ${MAN8PREFIX}/man/man8; \
+		${INSTALL_MAN} munin.conf.5 ${MAN5PREFIX}/share/man/man5; \
+		${INSTALL_MAN} munin-cron.8 munin-graph.8 munin-html.8 munin-limits.8 munin-update.8 ${MAN8PREFIX}/share/man/man8; \
 	)
 	(cd ${ETCDIR}; for i in `find . -type f`; do mv $$i $$i.sample; done)
 	${MV} ${WWWDIR}/.htaccess ${WWWDIR}/.htaccess.sample
