--- a/ftp/Makefile
+++ b/ftp/Makefile
@@ -2,6 +2,7 @@ COMMENT = File Transfer Protocol
 
 SUBDIR += axel
 SUBDIR += curl
+SUBDIR += curl810
 SUBDIR += filezilla
 SUBDIR += freebsd-ftpd
 SUBDIR += ftpcopy
