--- a/filesystems/scan_ffs/Makefile
+++ b/filesystems/scan_ffs/Makefile
@@ -1,9 +1,7 @@
-
-
 PORTNAME=	scan_ffs
 PORTVERSION=	1.2
-PORTREVISION=	1
-CATEGORIES=	sysutils
+PORTREVISION=	2
+CATEGORIES=	filesystems sysutils
 MASTER_SITES=	http://www.ranner.eu/stuff/
 
 MAINTAINER=	ports@MidnightBSD.org
