--- a/filesystems/sshfs/Makefile
+++ b/filesystems/sshfs/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	sshfs
 PORTVERSION=	2.8
 DISTVERSIONPREFIX=	${PORTNAME}_
-CATEGORIES=	sysutils
+CATEGORIES=	filesystems
 PKGNAMEPREFIX=	fusefs-
 
 MAINTAINER=	ports@MidnightBSD.org
