--- a/filesystems/fusefs-libs/Makefile
+++ b/filesystems/fusefs-libs/Makefile
@@ -2,7 +2,7 @@ PORTNAME=	fusefs
 DISTVERSIONPREFIX=	fuse-
 DISTVERSION=	2.9.9
 PORTREVISION=	1
-CATEGORIES=	sysutils
+CATEGORIES=	filesystems sysutils
 PKGNAMESUFFIX=	-libs
 
 MAINTAINER=	ports@MidnightBSD.org
