--- a/filesystems/fusefs-libs3/Makefile
+++ b/filesystems/fusefs-libs3/Makefile
@@ -1,8 +1,6 @@
-# Created by: Stefan Esser
-
 PORTNAME=	fusefs-libs3
 DISTVERSION=	3.11.0
-CATEGORIES=	sysutils
+CATEGORIES=	filesystems sysutils
 MASTER_SITES=	https://github.com/libfuse/libfuse/releases/download/fuse-${DISTVERSION}/
 DISTNAME=	fuse-${DISTVERSION}
 
