--- a/filesystems/unionfs/Makefile
+++ b/filesystems/unionfs/Makefile
@@ -1,16 +1,19 @@
 PORTNAME=	unionfs
-PORTVERSION=	2.0
 DISTVERSIONPREFIX=	v
-CATEGORIES=	sysutils
+DISTVERSION=	2.2
+CATEGORIES=	filesystems
 PKGNAMEPREFIX=	fusefs-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	FUSE based implementation of the well-known unionfs
-
-LICENSE=	gpl2
+WWW=		https://github.com/rpodgorny/unionfs-fuse
 
 LICENSE=	bsd3
 LICENSE_FILE=	${WRKSRC}/LICENSE
+
+TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pytest>=0:devel/py-pytest@${PY_FLAVOR}
+
+USES=		cmake fuse localbase:ldflags python:test
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	rpodgorny
@@ -20,14 +23,16 @@ SUB_FILES=	pkg-message
 
 PLIST_FILES=	bin/unionfs \
 		bin/unionfsctl \
-		man/man8/unionfs.8.gz
-
-USES=		fuse cmake localbase:ldflags
-
-post-patch:
-	@${REINPLACE_CMD} "s,share/man,man,g" ${WRKSRC}/man/CMakeLists.txt
+		share/man/man8/unionfs.8.gz
 
 post-install:
 	@${STRIP_CMD} ${STAGEDIR}${PREFIX}/bin/*
+
+pre-test:
+	${RLN} ${BUILD_WRKSRC}/src/unionfs ${WRKSRC}/src/unionfs
+	${RLN} ${BUILD_WRKSRC}/src/unionfsctl ${WRKSRC}/src/unionfsctl
+
+do-test:
+	cd ${WRKSRC} && ${SETNEV} ${MAKE_ENV} ${PYTHON_CMD} -m pytest -k test_help --verbose
 
 .include <bsd.port.mk>
