--- a/filesystems/zfs-replicate/Makefile
+++ b/filesystems/zfs-replicate/Makefile
@@ -1,15 +1,13 @@
 PORTNAME=	zfs-replicate
-PORTVERSION=	0.7
-PORTREVISION=	2
-CATEGORIES=	sysutils
+PORTVERSION=	2.0.2
+DISTVERSIONPREFIX=	v
+CATEGORIES=	filesystems sysutils
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	ZFS Snapshot Replication Script
-WWW=		https://github.com/leprechau/zfs-replicate
+WWW=		https://github.com/aaronhurt/zfs-replicate
 
 LICENSE=	cddl
-
-RUN_DEPENDS=	bash:shells/bash
 
 USES=	shebangfix
 
@@ -24,25 +22,24 @@ PORTDOCS=	README.md
 PORTDATA=	config.sample.sh
 
 USE_GITHUB=	yes
-GH_ACCOUNT=	leprechau
-GH_TAGNAME=	17bf8fb
+GH_ACCOUNT=	aaronhurt
 
 PLIST_FILES=	sbin/zfs-replicate
 
 do-install:
 	${INSTALL_SCRIPT} ${WRKSRC}/zfs-replicate.sh \
-		${PREFIX}/sbin/zfs-replicate
+		${STAGEDIR}${PREFIX}/sbin/zfs-replicate
 
 do-install-DOCS-on:
-	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
+	@${MKDIR} ${STAGEDIR}${DOCSDIR}
 .for file in ${PORTDOCS}
-	${INSTALL_DATA} ${WRKSRC}/${file} ${FAKE_DESTDIR}${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC}/${file} ${STAGEDIR}${DOCSDIR}
 .endfor
 
 do-install-EXAMPLES-on:
-	@${MKDIR} ${FAKE_DESTDIR}${DATADIR}
+	@${MKDIR} ${STAGEDIR}${DATADIR}
 .for data in ${PORTDATA}
-	${INSTALL_DATA} ${WRKSRC}/${data} ${FAKE_DESTDIR}${DATADIR}
+	${INSTALL_DATA} ${WRKSRC}/${data} ${STAGEDIR}${DATADIR}
 .endfor
 
 .include <bsd.port.mk>
