--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1096,6 +1096,7 @@ SUBDIR += py-pathable
 SUBDIR += py-pathlib2
 SUBDIR += py-pathspec
 SUBDIR += py-pbr
+SUBDIR += py-pdm-backend
 SUBDIR += py-pendulum
 SUBDIR += py-pep8-naming
 SUBDIR += py-phx-class-registry
